use_cases/dynamic_cases/v1.0/language/UpdatedCases.md
# Updated Use Cases

  - Changes made for Language Spec compliance

## Language Use Cases

### Bad Commands

| File                                           | Changes | Reason | Source                                                   | Note |
| ---------------------------------------------- | ------- | ------ | -------------------------------------------------------- | ---- |
| action\_notarget.json                          |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| action\_notarget\_id.json                      |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| action\_unknown.json                           |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv4net\_badcidr.json                   |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv4net\_badip.json                     |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia3.json                |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| args\_empty.json                               |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| deny\_file\_hashes\_empty.json                 |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| deny\_file\_hashes\_sha512.json                |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| deny\_uri\_actuator\_empty.json                |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| deny\_uri\_actuator\_multiple.json             |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| empty.json                                     |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| empty\_array.json                              |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| empty\_object.json                             |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| number.json                                    |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| number\_integer.json                           |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| openc2\_response.json                          |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| openc2\_response\_text.json                    |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| query\_features\_ext\_args\_all.json           |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| query\_features\_ext\_args\_capX.json          |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| query\_features\_ext\_args\_dots.json          |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| query\_features\_ext\_args\_nox-.json          |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| query\_features\_ext\_args\_specialchar.json   |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| query\_features\_notunique.json                |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| query\_features\_unknown.json                  |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| query\_multiple\_target\_extensions.json       |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| query\_multiple\_targets.json                  |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| start\_container\_ext\_nocolon.json            |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| start\_container\_ext\_noprofile.json          |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| start\_container\_ext\_specialchar1.json       |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| start\_container\_ext\_specialchar2.json       |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| start\_container\_ext\_underscore\_first1.json |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| start\_container\_ext\_underscore\_first2.json |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| string.json                                    |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| target\_multiple.json                          |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |

### Good Commands

| File                                                                      | Changes | Reason | Source                                                   | Note |
| ------------------------------------------------------------------------- | ------- | ------ | -------------------------------------------------------- | ---- |
| allow\_device\_deviceid.json                                              |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_file\_hashes\_sha256.json                                          |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv4net\_cidr.json                                                 |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv4net.json                                                       |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_ipv4mapped\_orig.json                                     |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_ipv4mapped\_result.json                                   |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_localhost\_reduced.json                                   |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_localhost.json                                            |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_prefix.json                                               |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_unspecified\_reduced.json                                 |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_unspecified.json                                          |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia1.json                                           |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia2.json                                           |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia3.json                                           |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia4\_shortened.json                                |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia4.json                                           |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia5\_shortened.json                                |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia5.json                                           |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia6\_shortened.json                                |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia6.json                                           |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia7\_shortened.json                                |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia7.json                                           |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia8\_prefix1\_end.json                             |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia8\_prefix1\_start.json                           |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia8\_prefix1.json                                  |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia8\_prefix2.json                                  |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia8\_prefix3\_default\_route.json                  |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia8\_prefix3\_unspecified\_address.json            |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia8\_prefix4\_loopback\_address.json               |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia8\_prefix5\_ipv4\_mapped.json                    |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia8\_prefix5\_ipv4\_translated.json                |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia8\_prefix6\_ipv4\_translation.json               |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia8\_prefix7\_discard.json                         |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia8\_prefix8\_teredo.json                          |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia8\_prefix9\_ORCHIDv2.json                        |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia8\_prefix10\_example.json                        |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia8\_prefix11\_6to4.json                           |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia8\_prefix12\_unique\_local.json                  |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia8\_prefix13\_link\_local.json                    |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia8\_prefix14\_multicast.json                      |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia9\_multicast1\_nodes\_interface\_local.json      |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia9\_multicast2\_nodes\_link\_local.json           |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia9\_multicast3\_routers\_interface\_local.json    |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia9\_multicast3\_routers\_link\_local.json         |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia9\_multicast4\_routers\_site\_local.json         |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia9\_multicast5\_OSPFIGP.json                      |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia9\_multicast6\_OSPFIGP\_routers.json             |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia9\_multicast7\_RIP.json                          |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia9\_multicast8\_EIGRP.json                        |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia9\_multicast9\_PIM.json                          |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia9\_multicast10\_RPL.json                         |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia9\_multicast11\_mDNSv6.json                      |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia9\_multicast12\_NTP.json                         |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia9\_multicast13\_link\_name.json                  |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia9\_multicast14\_dhcp\_agents.json                |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia9\_multicast15\_multicast\_name\_resolution.json |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia9\_multicast16\_dhcp\_servers.json               |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia9\_multicast17\_solicited\_node.json             |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia9\_multicast18\_node\_info.json                  |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia10\_eui64.json                                   |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net\_wikipedia11\_derrick.json                                 |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| allow\_ipv6net.json                                                       |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| contain\_device\_deviceid.json                                            |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| deny\_file\_hashes\_md5\_sha1\_sha256.json                                |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| deny\_file\_hashes\_md5\_sha1.json                                        |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| deny\_file\_hashes\_md5\_sha256.json                                      |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| deny\_file\_hashes\_md5.json                                              |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| deny\_file\_hashes\_sha1\_sha256.json                                     |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| deny\_file\_hashes\_sha1.json                                             |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| deny\_file\_hashes\_sha256.json                                           |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| deny\_macaddr.json                                                        |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| https\_example\_deny\_file\_hashes.json                                   |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| ls\_example\_contain\_device.json                                         |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| ls\_example\_query\_features.json                                         |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| query\_features\_all\_id.json                                             |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| query\_features\_all.json                                                 |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| query\_features\_empty\_id.json                                           |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| query\_features\_empty.json                                               |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| query\_features\_profiles\_id.json                                        |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| query\_features\_profiles.json                                            |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| query\_properties\_firewall\_status.json                                  |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| remediate\_file\_hashes\_sha256.json                                      |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |

### Bad Responses

| File                                       | Changes | Reason | Source                                                   | Note |
| ------------------------------------------ | ------- | ------ | -------------------------------------------------------- | ---- |
| empty.json                                 |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| empty\_array.json                          |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| empty\_object.json                         |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| openc2\_command\_query\_features\_all.json |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| results\_empty.json                        |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| results\_unknown\_profile.json             |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| status\_asbool.json                        |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| status\_asstring.json                      |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| status\_negative.json                      |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| status\_too\_high.json                     |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| status\_too\_low.json                      |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| statustext\_nostatus.json                  |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |
| unknown\_field.json                        |         |        | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |      |

### Good Responses

| File                                  | Changes                                | Reason              | Source                                                   | Note                                 |
| ------------------------------------- | -------------------------------------- | ------------------- | -------------------------------------------------------- | ------------------------------------ |
| ls\_example\_query\_features.json     |                                        |                     | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |                                      |
| query\_features\_all.json             | version: "1.0-draft-2019-02" -\> "1.0" | language compliance | [Oasis](https://github.com/oasis-open/openc2-custom-aps) | Extensions are slpf or prefixed ‘x-‘ |
| query\_features\_all\_badprofile.json | version: "1.0-draft-2019-02" -\> "1.0" | language compliance | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |                                      |
| status\_102.json                      |                                        |                     | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |                                      |
| status\_200.json                      |                                        |                     | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |                                      |
| status\_400.json                      |                                        |                     | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |                                      |
| status\_401.json                      |                                        |                     | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |                                      |
| status\_403.json                      |                                        |                     | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |                                      |
| status\_404.json                      |                                        |                     | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |                                      |
| status\_500.json                      |                                        |                     | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |                                      |
| status\_501.json                      |                                        |                     | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |                                      |
| status\_503.json                      |                                        |                     | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |                                      |
| status\_and\_status\_text.json        |                                        |                     | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |                                      |
| status\_asdouble.json                 |                                        |                     | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |                                      |
| status\_only\_not\_implemented.json   |                                        |                     | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |                                      |
| status\_only\_success.json            |                                        |                     | [Oasis](https://github.com/oasis-open/openc2-custom-aps) |                                      |
